bugfix: campaignId not required

--- a/.env.example
+++ b/.env.example
@@ -46,4 +46,5 @@ EMAIL_FROM=
 TWILIO_MESSAGE_VALIDITY_PERIOD=
 DST_REFERENCE_TIMEZONE='America/New_York'
 PASSPORT_STRATEGY=local
-SHOW_TAGS=false
+EXPERIMENTAL_TAGS=1
+TEXTER_SIDEBOXES=contact-reference,tag-contact
